--- a/bab1.html
+++ b/bab1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bab 1 - Komikku</title>
+  <title>chapter 1</title>
   <style>
     body {
       font-family: sans-serif;
@@ -37,19 +37,31 @@
   </style>
 </head>
 <body>
+  <
   <div class="container">
-    <h1>Bab 1 - Komikku</h1>
-    <img src="img/bab1/Tak berjudul57_20250715125634.png" alt="Halaman 1">
-    <img src="img/bab1/Tak berjudul57_20250715131810.png" alt="Halaman 2">
-    <img src="img/bab1/Tak berjudul58_20250715132605.png" alt="Halaman 3">
-    <img src="img/bab1/Tak berjudul59_20250715142453.png" alt="Halaman 4">
-    <img src="img/bab1/Tak berjudul60_20250715143855.png" alt="Halaman 5">
-    <img src="img/bab1/Tak berjudul61_20250715144424.png" alt="Halaman 6">
-    <img src="img/bab1/Tak berjudul62_20250715144933.png" alt="Halaman 7">
-    <img src="img/bab1/Tak berjudul63_20250715145814.png" alt="Halaman 8">
+    <h1>chapter 1</h1>
+  <div>
+    <a href="bab1.html" class="nav-btn">⬅️ Chapter Sebelumnya</a>
+    <a href="index.html" class="nav-btn">📚 Daftar Chapter</a>
+    <a href="bab2.html" class="nav-btn">➡️ Chapter Selanjutnya</a>
+  </div>
+  
+    <img src="gambar 1.png"
+    <img src="gambar1.png" alt="Halaman 1">
+    <img src="gambar2.png" alt="Halaman 2">
+    <img src="gambar3.png" alt="Halaman 3">
+    <img src="gambar4.png" alt="Halaman 4">
+    <img src="gambar5.png" alt="Halaman 5">
+    <img src="gambar6.png" alt="Halaman 6">
+    <img src="gambar7.png" alt="Halaman 7">
+    <img src="gambar8.png" alt="Halaman 8">
     <nav>
-      <a href="index.html">← Kembali ke Daftar Bab</a>
+     
     </nav>
+  </div>
+    <a href="bab1.html" class="nav-btn">⬅️ Chapter Sebelumnya</a>
+    <a href="index.html" class="nav-btn">📚 Daftar Chapter</a>
+    <a href="bab2.html" class="nav-btn">➡️ Chapter Selanjutnya</a>
   </div>
 </body>
 </html>
